[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Mundo3.gd" type="Script" id=1]
[ext_resource path="res://Scenes/jogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/04B_30__.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/AutoTile2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Texturas/flags-36215_960_720.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=6]
radius = 26.9247

[sub_resource type="CircleShape2D" id=7]
radius = 23.8115

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="jogador" parent="." instance=ExtResource( 2 )]
position = Vector2( -302.477, 708.327 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="jogador"]

[node name="Label" type="Label" parent="jogador/ParallaxBackground2"]
margin_left = 4.54425
margin_top = 324.491
margin_right = 791.544
margin_bottom = 405.491
rect_pivot_offset = Vector2( 1184.07, 454.066 )
custom_fonts/font = SubResource( 1 )
text = "CENARIO 3:
ESTADO: DESENVOLVIMENTO"

[node name="ponto0" type="Label" parent="jogador/ParallaxBackground2"]
margin_left = 205.416
margin_top = 209.497
margin_right = 287.416
margin_bottom = 223.497
custom_fonts/font = SubResource( 2 )
text = "Flamulas 0 / 2"

[node name="ponto1" type="Label" parent="jogador/ParallaxBackground2"]
margin_left = 205.583
margin_top = 208.724
margin_right = 389.583
margin_bottom = 225.724
custom_fonts/font = SubResource( 3 )
text = "Flamulas 1 / 2"

[node name="ponto2" type="Label" parent="jogador/ParallaxBackground2"]
margin_left = 205.186
margin_top = 208.954
margin_right = 394.186
margin_bottom = 225.954
custom_fonts/font = SubResource( 4 )
text = "Flamulas 2 / 2"

[node name="Label2" type="Label" parent="jogador/ParallaxBackground2"]
margin_left = 121.889
margin_top = 226.306
margin_right = 706.889
margin_bottom = 275.306
custom_fonts/font = SubResource( 5 )
text = "Congratulations"

[node name="AutoTile" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -917437, 0, 6, -917436, 0, 196609, -917435, 0, 196610, -851905, 0, 196613, -851902, 0, 6, -851901, 0, 65543, -720905, 0, 5, -786367, 0, 6, -786366, 0, 65543, -655369, 0, 131077, -720832, 0, 196608, -720831, 0, 65543, -655297, 0, 196613, -262138, 0, 1, -262137, 0, 65536, -262136, 0, 65536, -262135, 0, 65536, -262134, 0, 65536, -262133, 0, 2, -131079, 0, 6, -131078, 0, 196609, -131077, 0, 196609, -131076, 0, 131076, -131075, 0, 196609, -131074, 0, 196609, -131073, 0, 196609, -196608, 0, 131076, -196607, 0, 196609, -196606, 0, 196609, -196605, 0, 196609, -196604, 0, 196609, -196603, 0, 196609, -196602, 0, 65544, -196601, 0, 131072, -196600, 0, 131072, -196599, 0, 131072, -196598, 0, 131072, -196597, 0, 65547, -196596, 0, 196609, -196595, 0, 196609, -196594, 0, 196609, -196593, 0, 196609, -196592, 0, 196609, -196591, 0, 196609, -196590, 0, 196609, -196589, 0, 196609, -196588, 0, 196609, -196587, 0, 196609, -196586, 0, 196609, -196585, 0, 196609, -196584, 0, 196609, -196583, 0, 131076, -196582, 0, 196609, -196581, 0, 196609, -196580, 0, 196609, -196579, 0, 196609, -196578, 0, 196609, -196577, 0, 196609, -196576, 0, 196609, -196575, 0, 196609, -196574, 0, 196609, -196573, 0, 196609, -196572, 0, 196609, -196571, 0, 196609, -196570, 0, 196609, -196569, 0, 7, -65543, 0, 65541, -65540, 0, 131077, -131072, 0, 131077, -131047, 0, 65541, -131033, 0, 65541, -7, 0, 65541, -65515, 0, 196613, -65513, 0, 196613, -65511, 0, 65541, -65498, 0, 196608, -65497, 0, 196612, 65529, 0, 65541, 5, 0, 196613, 25, 0, 65541, 39, 0, 65541, 131065, 0, 65541, 131067, 0, 196613, 65548, 0, 196608, 65549, 0, 196609, 65550, 0, 196610, 65561, 0, 131075, 65562, 0, 196610, 65575, 0, 65541, 196601, 0, 65541, 196604, 0, 196613, 131080, 0, 196608, 131081, 0, 196610, 131088, 0, 196608, 131089, 0, 196609, 131090, 0, 196609, 131091, 0, 196610, 131095, 0, 196613, 131097, 0, 65541, 131111, 0, 65541, 262137, 0, 65541, 196608, 0, 6, 196609, 0, 196610, 196633, 0, 65541, 196646, 0, 196608, 196647, 0, 196612, 327673, 0, 65541, 327676, 0, 196608, 327677, 0, 196610, 262144, 0, 131077, 262169, 0, 65541, 262183, 0, 65541, 393209, 0, 65541, 327693, 0, 196608, 327694, 0, 196609, 327695, 0, 196610, 327701, 0, 196608, 327702, 0, 196609, 327703, 0, 196610, 327705, 0, 131075, 327706, 0, 196610, 327719, 0, 65541, 458745, 0, 65541, 458750, 0, 196608, 458751, 0, 196610, 393217, 0, 196608, 393218, 0, 196609, 393219, 0, 196609, 393220, 0, 196609, 393221, 0, 196610, 393241, 0, 65541, 393255, 0, 65541, 524281, 0, 65541, 458777, 0, 65541, 458790, 0, 196608, 458791, 0, 196612, 589817, 0, 131075, 589818, 0, 196610, 524295, 0, 196608, 524296, 0, 196609, 524297, 0, 196609, 524298, 0, 196610, 524306, 0, 196608, 524307, 0, 196609, 524308, 0, 196610, 524313, 0, 65541, 524327, 0, 65541, 655353, 0, 65541, 655358, 0, 196613, 589849, 0, 131075, 589850, 0, 196610, 589863, 0, 65541, 720889, 0, 65541, 655361, 0, 196608, 655362, 0, 196609, 655363, 0, 196609, 655364, 0, 196609, 655365, 0, 196610, 655374, 0, 196613, 655376, 0, 196613, 655385, 0, 131077, 655399, 0, 65541, 786425, 0, 65541, 720934, 0, 1, 720935, 0, 11, 851961, 0, 65542, 851962, 0, 196609, 851963, 0, 196609, 851964, 0, 196609, 851965, 0, 196609, 851966, 0, 196609, 851967, 0, 196609, 786432, 0, 196609, 786433, 0, 196609, 786434, 0, 196609, 786435, 0, 196609, 786436, 0, 196609, 786437, 0, 196609, 786438, 0, 196609, 786439, 0, 196609, 786440, 0, 196609, 786441, 0, 196609, 786442, 0, 196609, 786443, 0, 196609, 786444, 0, 196609, 786445, 0, 196609, 786446, 0, 196609, 786447, 0, 196609, 786448, 0, 196609, 786449, 0, 196609, 786450, 0, 196609, 786451, 0, 196609, 786452, 0, 196609, 786453, 0, 196609, 786454, 0, 196609, 786455, 0, 196609, 786456, 0, 196609, 786457, 0, 196609, 786458, 0, 196609, 786459, 0, 196609, 786460, 0, 196609, 786461, 0, 196609, 786462, 0, 196609, 786463, 0, 196609, 786464, 0, 196609, 786465, 0, 196609, 786466, 0, 196609, 786467, 0, 196609, 786468, 0, 196609, 786469, 0, 196609, 786470, 0, 65544, 786471, 0, 65538 )

[node name="flags-36215_960_720" type="Sprite" parent="."]
position = Vector2( 1506.75, -91.3087 )
scale = Vector2( 0.102677, 0.102677 )
texture = ExtResource( 5 )

[node name="flags-36215_960_721" type="Sprite" parent="."]
position = Vector2( 2457.38, -89.3607 )
scale = Vector2( 0.102677, 0.102677 )
texture = ExtResource( 5 )

[node name="flamula1" type="Area2D" parent="."]
position = Vector2( 1505.81, -94.1827 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="flamula1"]
shape = SubResource( 6 )

[node name="flamula2" type="Area2D" parent="."]
position = Vector2( 2455.29, -90.3273 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="flamula2"]
shape = SubResource( 7 )
[connection signal="body_entered" from="flamula1" to="." method="_on_flamula1_body_entered"]
[connection signal="body_entered" from="flamula2" to="." method="_on_flamula2_body_entered"]
